# sync-file-server

./: BUILD.bazel  go.mod  go.sum  main.go
caller/: BUILD.bazel  cache.go  caller.go  gitee.go
caller/requests/: BUILD.bazel  builder.go  result.go
grpc/server/: server.go  sync_file.go
models/: pool.go  sync_file.go  sync_repo_file.go
protocol/: repo.pb.go  repo.proto  sync_file.pb.go  sync_file.proto
repo-file-cache/: cache.go
server/: backend.go  main.go
server/gitee/: gitee.go
